# OpenHarness

docs/superpowers/plans/: 2026-04-15-oh-api-implementation-plan.md
docs/superpowers/specs/: 2026-04-15-accio-integration-design.md
oh-api/: README.md  pyproject.toml
oh-api/src/oh_api/: __init__.py  config.py  main.py
oh-api/src/oh_api/auth/: __init__.py  api_key.py
oh-api/src/oh_api/models/: __init__.py  events.py  requests.py  responses.py
oh-api/src/oh_api/routes/: __init__.py  chat.py  sessions.py  skills.py  tools.py
oh-api/src/oh_api/services/: __init__.py  agent_service.py  openharness_bridge.py  session_store.py
oh-api/tests/: __init__.py  test_models.py  test_routes.py  test_session_store.py
src/openharness/api/: registry.py
src/openharness/prompts/: system_prompt.py
