[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oh-api"
version = "0.1.0"
description = "REST API Server for OpenHarness"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "openharness-ai @ file:///Users/mac/Desktop/OpenHarness-main",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
oh-api = "oh_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oh_api"]

[tool.hatch.metadata]
allow-direct-references = true
